@@ -5,9 +5,12 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: Em2RunAction.cc,v 1.8 2001-02-21 12:15:46 maire Exp $
+// $Id: Em2RunAction.cc,v 1.9 2001-03-08 14:28:14 maire Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 // 
+//....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo....
+
+// 08.03.01 Hisaya: Adapted MyVector for STL   
 
 //....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo....
 //....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo....
@@ -40,22 +43,22 @@ Em2RunAction::Em2RunAction(Em2DetectorConstruction*   det,
 :Em2Det(det),Em2Kin(kin)			   
 { 
   nLbin = Em2Det->GetnLtot();
-  dEdL             = *new MyVector(nLbin);
-  sumELongit       = *new MyVector(nLbin);
-  sumELongitCumul  = *new MyVector(nLbin);
-  sumE2Longit      = *new MyVector(nLbin);
-  sumE2LongitCumul = *new MyVector(nLbin);
+  dEdL.resize(nLbin, 0.0);
+  sumELongit.resize(nLbin, 0.0);
+  sumELongitCumul.resize(nLbin, 0.0); 
+  sumE2Longit.resize(nLbin, 0.0);     
+  sumE2LongitCumul.resize(nLbin, 0.0);
   
-  gammaFlux        = *new MyVector(nLbin);
-  electronFlux     = *new MyVector(nLbin);
-  positronFlux     = *new MyVector(nLbin);
+  gammaFlux.resize(nLbin, 0.0);
+  electronFlux.resize(nLbin, 0.0);
+  positronFlux.resize(nLbin, 0.0);
     
   nRbin = Em2Det->GetnRtot();
-  dEdR             = *new MyVector(nRbin);
-  sumERadial       = *new MyVector(nRbin);
-  sumERadialCumul  = *new MyVector(nRbin);
-  sumE2Radial      = *new MyVector(nRbin);
-  sumE2RadialCumul = *new MyVector(nRbin);
+  dEdR.resize(nRbin, 0.0);
+  sumERadial.resize(nRbin, 0.0);
+  sumERadialCumul.resize(nRbin, 0.0);
+  sumE2Radial.resize(nRbin, 0.0);
+  sumE2RadialCumul.resize(nRbin, 0.0);
    
   runMessenger = new Em2RunActionMessenger(this);   
   saveRndm = 1;
@@ -156,29 +159,34 @@ void Em2RunAction::BeginOfRunAction(const G4Run* aRun)
   
   G4int nLtot = Em2Det->GetnLtot();
   if(nLbin != nLtot)
-    {dEdL.reshape(nLbin=nLtot);
-     sumELongit.reshape(nLbin)     ; sumE2Longit.reshape(nLbin);
-     sumELongitCumul.reshape(nLbin); sumE2LongitCumul.reshape(nLbin);
-     gammaFlux.reshape(nLbin) ;
-     electronFlux.reshape(nLbin)   ; positronFlux.reshape(nLbin);
+    {dEdL.resize(nLbin=nLtot, 0.0);
+     sumELongit.resize(nLbin, 0.0);
+     sumE2Longit.resize(nLbin, 0.0);
+     sumELongitCumul.resize(nLbin, 0.0);
+     sumE2LongitCumul.resize(nLbin, 0.0);
+     gammaFlux.resize(nLbin, 0.0);
+     electronFlux.resize(nLbin, 0.0);
+     positronFlux.resize(nLbin, 0.0);
      rebin=true;
     }
     
   G4int nRtot = Em2Det->GetnRtot();
   if(nRbin != nRtot)
-    {dEdR.reshape(nRbin=nRtot);
-     sumERadial.reshape(nRbin)     ; sumE2Radial.reshape(nRbin);
-     sumERadialCumul.reshape(nRbin); sumE2RadialCumul.reshape(nRbin);
+    {dEdR.resize(nRbin=nRtot, 0.0);
+     sumERadial.resize(nRbin, 0.0);
+     sumE2Radial.resize(nRbin, 0.0);
+     sumERadialCumul.resize(nRbin, 0.0);
+     sumE2RadialCumul.resize(nRbin, 0.0);
      rebin=true;
     }
           
   //initialize arrays of cumulative energy deposition
   //    
   for (G4int i=0; i<nLbin; i++)
-     sumELongit(i)=sumE2Longit(i)=sumELongitCumul(i)=sumE2LongitCumul(i)=0.;
+     sumELongit[i]=sumE2Longit[i]=sumELongitCumul[i]=sumE2LongitCumul[i]=0.;
      
   for (G4int j=0; j<nRbin; j++)
-     sumELongit(j)=sumE2Longit(j)=sumELongitCumul(j)=sumE2LongitCumul(j)=0.;
+     sumELongit[j]=sumE2Longit[j]=sumELongitCumul[j]=sumE2LongitCumul[j]=0.;
              
   //initialize track length
   sumChargTrLength=sum2ChargTrLength=sumNeutrTrLength=sum2NeutrTrLength=0.;
@@ -206,21 +214,21 @@ void Em2RunAction::fillPerEvent()
   G4double dLCumul = 0.;     
   for (G4int i=0; i<nLbin; i++) 
      {
-      sumELongit(i)  += dEdL(i);
-      sumE2Longit(i) += dEdL(i)*dEdL(i);
-      dLCumul        += dEdL(i);
-      sumELongitCumul(i)  += dLCumul;
-      sumE2LongitCumul(i) += dLCumul*dLCumul;
+      sumELongit[i]  += dEdL[i];
+      sumE2Longit[i] += dEdL[i]*dEdL[i];
+      dLCumul        += dEdL[i];
+      sumELongitCumul[i]  += dLCumul;
+      sumE2LongitCumul[i] += dLCumul*dLCumul;
      }
      
   G4double dRCumul = 0.;     
   for (G4int j=0; j<nRbin; j++) 
      {
-      sumERadial(j)  += dEdR(j);
-      sumE2Radial(j) += dEdR(j)*dEdR(j);
-      dRCumul        += dEdR(j);
-      sumERadialCumul(j)  += dRCumul;
-      sumE2RadialCumul(j) += dRCumul*dRCumul;
+      sumERadial[j]  += dEdR[j];
+      sumE2Radial[j] += dEdR[j]*dEdR[j];
+      dRCumul        += dEdR[j];
+      sumERadialCumul[j]  += dRCumul;
+      sumE2RadialCumul[j] += dRCumul*dRCumul;
      }
           
   sumChargTrLength  += ChargTrLength;
@@ -261,34 +269,34 @@ void Em2RunAction::EndOfRunAction(const G4Run* aRun)
   //
   G4double dLradl = Em2Det->GetdLradl();    
   
-  MyVector MeanELongit     (nLbin), rmsELongit     (nLbin);
+  MyVector MeanELongit(nLbin),      rmsELongit(nLbin);
   MyVector MeanELongitCumul(nLbin), rmsELongitCumul(nLbin);
    
   G4int i; G4double bin;  
   for (i=0; i<nLbin; i++)
    {
-    MeanELongit(i) = norme*sumELongit(i);
-     rmsELongit(i) = norme*sqrt(abs(NbOfEvents*sumE2Longit(i)
-                                - sumELongit(i)*sumELongit(i)));
+    MeanELongit[i] = norme*sumELongit[i];
+     rmsELongit[i] = norme*sqrt(abs(NbOfEvents*sumE2Longit[i]
+                                - sumELongit[i]*sumELongit[i]));
           
-    MeanELongitCumul(i) = norme*sumELongitCumul(i);
-     rmsELongitCumul(i) = norme*sqrt(abs(NbOfEvents*sumE2LongitCumul(i) 
-                                    - sumELongitCumul(i)*sumELongitCumul(i)));
+    MeanELongitCumul[i] = norme*sumELongitCumul[i];
+     rmsELongitCumul[i] = norme*sqrt(abs(NbOfEvents*sumE2LongitCumul[i] 
+                                    - sumELongitCumul[i]*sumELongitCumul[i]));
 
-    gammaFlux   (i) /= NbOfEvents;
-    electronFlux(i) /= NbOfEvents;
-    positronFlux(i) /= NbOfEvents;                                    
+    gammaFlux   [i] /= NbOfEvents;
+    electronFlux[i] /= NbOfEvents;
+    positronFlux[i] /= NbOfEvents;                                    
 
 #ifndef G4NOHIST                                    
     bin = i*dLradl;                                
-    histo4->accumulate(bin,MeanELongit(i)/dLradl);
+    histo4->accumulate(bin,MeanELongit[i]/dLradl);
     bin = (i+1)*dLradl;
-    histo5->accumulate(bin,MeanELongitCumul(i));
-    histo6->accumulate(bin, rmsELongitCumul(i));
+    histo5->accumulate(bin,MeanELongitCumul[i]);
+    histo6->accumulate(bin, rmsELongitCumul[i]);
     
-    histo7->accumulate(bin, gammaFlux(i));
-    histo8->accumulate(bin, positronFlux(i));
-    histo9->accumulate(bin, electronFlux(i));
+    histo7->accumulate(bin, gammaFlux[i]);
+    histo8->accumulate(bin, positronFlux[i]);
+    histo9->accumulate(bin, electronFlux[i]);
 #endif                                            
    }
    
@@ -296,25 +304,25 @@ void Em2RunAction::EndOfRunAction(const G4Run* aRun)
   // 
   G4double dRradl = Em2Det->GetdRradl();    
   
-  MyVector MeanERadial     (nRbin), rmsERadial     (nRbin);
+  MyVector MeanERadial(nRbin),      rmsERadial(nRbin);
   MyVector MeanERadialCumul(nRbin), rmsERadialCumul(nRbin);
     
   for (i=0; i<nRbin; i++)
    {
-    MeanERadial(i) = norme*sumERadial(i);
-     rmsERadial(i) = norme*sqrt(abs(NbOfEvents*sumE2Radial(i)
-                                - sumERadial(i)*sumERadial(i)));
+    MeanERadial[i] = norme*sumERadial[i];
+     rmsERadial[i] = norme*sqrt(abs(NbOfEvents*sumE2Radial[i]
+                                - sumERadial[i]*sumERadial[i]));
           
-    MeanERadialCumul(i) = norme*sumERadialCumul(i);
-     rmsERadialCumul(i) = norme*sqrt(abs(NbOfEvents*sumE2RadialCumul(i) 
-                                    - sumERadialCumul(i)*sumERadialCumul(i)));
+    MeanERadialCumul[i] = norme*sumERadialCumul[i];
+     rmsERadialCumul[i] = norme*sqrt(abs(NbOfEvents*sumE2RadialCumul[i] 
+                                    - sumERadialCumul[i]*sumERadialCumul[i]));
                                  
 #ifndef G4NOHIST                                     
     bin = i*dRradl;                                
-    hist10->accumulate(bin,MeanERadial(i)/dRradl);
+    hist10->accumulate(bin,MeanERadial[i]/dRradl);
     bin = (i+1)*dRradl;
-    hist11->accumulate(bin,MeanERadialCumul(i));
-    hist12->accumulate(bin, rmsERadialCumul(i));
+    hist11->accumulate(bin,MeanERadialCumul[i]);
+    hist12->accumulate(bin, rmsERadialCumul[i]);
 #endif                                           
    }
 
@@ -346,11 +354,11 @@ void Em2RunAction::EndOfRunAction(const G4Run* aRun)
      G4double inf=i*dLradl, sup=inf+dLradl;
        
      G4cout << G4std::setw(8) << inf << "->" << G4std::setw(5) << sup << " radl: " 
-                                      << G4std::setw(7) << MeanELongit(i) << "%  " 
-                                      << G4std::setw(9) << rmsELongit(i) << "%       "                                  
+                                      << G4std::setw(7) << MeanELongit[i] << "%  " 
+                                      << G4std::setw(9) << rmsELongit[i] << "%       "                                  
                        << "      0->" << G4std::setw(5) << sup << " radl: " 
-                                      << G4std::setw(7) << MeanELongitCumul(i) << "%  " 
-                                      << G4std::setw(7) << rmsELongitCumul(i) << "% " 
+                                      << G4std::setw(7) << MeanELongitCumul[i] << "%  " 
+                                      << G4std::setw(7) << rmsELongitCumul[i] << "% " 
             <<G4endl;
    }
    
@@ -367,18 +375,18 @@ void Em2RunAction::EndOfRunAction(const G4Run* aRun)
      G4double inf=i*dRradl, sup=inf+dRradl;
        
      G4cout << G4std::setw(8) << inf << "->" << G4std::setw(5) << sup << " radl: " 
-                                      << G4std::setw(7) << MeanERadial(i) << "%  " 
-                                      << G4std::setw(9) << rmsERadial(i) << "%       "                                  
+                                      << G4std::setw(7) << MeanERadial[i] << "%  " 
+                                      << G4std::setw(9) << rmsERadial[i] << "%       "                                  
                        << "      0->" << G4std::setw(5) << sup << " radl: " 
-                                      << G4std::setw(7) << MeanERadialCumul(i) << "%  " 
-                                      << G4std::setw(7) << rmsERadialCumul(i) << "% " 
+                                      << G4std::setw(7) << MeanERadialCumul[i] << "%  " 
+                                      << G4std::setw(7) << rmsERadialCumul[i] << "% " 
             <<G4endl;
    }  
   G4cout << G4endl;
   G4cout << G4std::setw(37) << "SUMMARY" << G4endl;
   G4cout << G4std::setw(42) << "energy deposit : " 
-         << G4std::setw(7)  << MeanELongitCumul(nLbin-1) << " % E0 +- "
-         << G4std::setw(7)  <<  rmsELongitCumul(nLbin-1) << " % E0" << G4endl;
+         << G4std::setw(7)  << MeanELongitCumul[nLbin-1] << " % E0 +- "
+         << G4std::setw(7)  <<  rmsELongitCumul[nLbin-1] << " % E0" << G4endl;
   G4cout << G4std::setw(42) << "charged traklen: " 
          << G4std::setw(7)  << MeanChargTrLength << " radl +- "
          << G4std::setw(7)  <<  rmsChargTrLength << " radl" << G4endl;
